compiler/kernc_cli/tests/soundness/reject/specialization/blanket_supertrait_assoc_binding_fake_refl_must_not_infer_assoc.rn
// A blanket derived-trait impl must not use a shadowable blanket parent proof
// to make a supertrait associated-type equality globally true for every later
// specialization of the receiver.
// stderr: mismatched types

trait TypeIs[T] {
    type Is;
};

trait Lift[T]: TypeIs[T, Is = T] {};

impl[S, T] S: TypeIs[T] {
    type Is = T;
}

impl[S, T] S: Lift[T] {}

struct FakeProof[L, R] {};

impl[L, R] FakeProof[L, R]: TypeIs[R] {
    type Is = L;
}

fn rewrite[R, RW](value: RW.TypeIs[R].Is) R
    where RW: Lift[R],
{
    return value;
}

fn cast[L, R](value: L) R {
    return rewrite[R, FakeProof[L, R]](value);
}

fn seed() i32 {
    return 11;
}

fn forge[R]() R {
    return cast[&fn() i32, R](seed);
}

fn main() i32 {
    let forged = forge[&fn(i32, i32) i32]();
    return forged(100, 200) - 11;
}
